--- a/.github/workflows/buildspec.yml
+++ b/.github/workflows/buildspec.yml
@@ -31,4 +31,4 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
-        run: python .github/test_actions/test.py
+        run: python test.py
